--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>yueruの広場</title>
+  <title>やまうえの学校、APU</title>
   <link rel="icon" href="re：quest.jpg">
   <meta name="description" content="yueruのポートフォリオサイトです">
   <link rel="stylesheet" href="style.css">
@@ -14,14 +14,14 @@
       <div class="icon">
 
 
-      <a href="https://www.facebook.com/Yueru-1815500238677047/" target="_blank">
-      <img src="re：quest.jpg" width="120" height="120" alt="yueruのアイコンです！">
+      <a href="http://www.apu.ac.jp/home/" target="_blank">
+      <img src="ダウンロード.png" width="120" height="120" alt="yueruのアイコンです！">
       </a>
     </div>
     <div class="info">
 
-      <h1>yueru</h1>
-      <p>酒を飲んだら飲まれがち</p>
+      <h1>Asia Pacific University</h1>
+      <p>WELCOME TO APU WORLD</p>
       <div class="submittion">
 
       <p>Name<input type="text" name="名前" /></p>
@@ -39,18 +39,22 @@
 
     <section>
       <h1>Drink all day</h1>
-      <img src="Palace-Hotel-Tokyo-–-Royal-Bar-–-Cocktail-III-T2-310x470.jpg" width="400" height="400" alt="yueruのアイコンです！">
-      <p>お酒飲みがち。でも下戸。味なんてわからないけど、とりあえず酔いたいだけ。</p>
+      <img src="ダウンロード (1).jpeg" width="400" height="400" alt="yueruのアイコンです！">
+      <p>APUはバイリンガル育成所。理由は学生の半分以上が世界中から集まる留学生だから。<br>
+      所在地の別府にあるマックでは店内のお客様の国籍数と総席数が一致するときなんかあるらしい。</p>
     </section>
     <section>
       <h1>Sunny Place</h1>
-      <img src="IMG_0479.jpg" width="400" height="400" alt="yueruのアイコンです！">
-      <p>彼女に引っ張られ連れて行かれるバー。テキーラ直飲みはトラウマです。</p>
+      <img src="1f6023c8b6f013fe1c5e2c176fc97330-e1564047168380.png" width="400" height="400" alt="yueruのアイコンです！">
+      <p>外の娯楽とは関係の一切を絶った、標高300Mの高所に位置するAPU。<br>
+        山上にそびえ立つその姿を表すなら天空の城というよりは人里離れた寺であり、辺りに存在する飲食店は学食堂の一箇所のみ。<br>
+        ちなみに、この霧が晴れれば上記の風景写真が現れます。</p>
     </section>
     <section>
       <h1>Pretty Cat</h1>
       <img src="images (2) 2.24.42.jpeg" width="400" height="400" alt="yueruのアイコンです！">
-      <p>癒しは猫。すり寄ってほしい願望が止まらない。</p>
+      <p>癒しは猫。すり寄ってほしい願望が止まらない。<br>
+      カラオケ、ラウワン、酒場などの娯楽が学校帰り、気軽に味わえない我々は、時折出没する野良猫に癒しを求めています。</p>
     </section>
 
       </section>
