--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
     </section>
     <section>
       <h1>Sunny Place</h1>
-      <img src="1f6023c8b6f013fe1c5e2c176fc97330-e1564047168380.png" width="400" height="400" alt="yueruのアイコンです！">
+      <img src="https://github.com/taka1995/flow-demo/blob/master/public/1f6023c8b6f013fe1c5e2c176fc97330-e1564047168380.png" width="400" height="400" alt="yueruのアイコンです！">
       <p>外の娯楽とは関係の一切を絶った、標高300Mの高所に位置するAPU。<br>
         山上にそびえ立つその姿を表すなら天空の城というよりは人里離れた寺であり、辺りに存在する飲食店は学食堂の一箇所のみ。<br>
         ちなみに、この霧が晴れれば上記の風景写真が現れます。</p>
