--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <title>やまうえの学校、APU</title>
   <link rel="icon" href="re：quest.jpg">
   <meta name="description" content="yueruのポートフォリオサイトです">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://github.com/taka1995/flow-demo/blob/master/public/style.css">
   </head>
   <body>
     <header>
@@ -15,7 +15,7 @@
 
 
       <a href="http://www.apu.ac.jp/home/" target="_blank">
-      <img src="ダウンロード.png" width="120" height="120" alt="yueruのアイコンです！">
+      <img src="https://github.com/taka1995/flow-demo/blob/master/public/ダウンロード.png" width="120" height="120" alt="yueruのアイコンです！">
       </a>
     </div>
     <div class="info">
@@ -39,7 +39,7 @@
 
     <section>
       <h1>Drink all day</h1>
-      <img src="ダウンロード (1).jpeg" width="400" height="400" alt="yueruのアイコンです！">
+      <img src="https://github.com/taka1995/flow-demo/blob/master/public/ダウンロード (1).jpeg" width="400" height="400" alt="yueruのアイコンです！">
       <p>APUはバイリンガル育成所。理由は学生の半分以上が世界中から集まる留学生だから。<br>
       所在地の別府にあるマックでは店内のお客様の国籍数と総席数が一致するときなんかあるらしい。</p>
     </section>
@@ -52,7 +52,7 @@
     </section>
     <section>
       <h1>Pretty Cat</h1>
-      <img src="images (2) 2.24.42.jpeg" width="400" height="400" alt="yueruのアイコンです！">
+      <img src="https://github.com/taka1995/flow-demo/blob/master/public/images (2) 2.24.42.jpeg" width="400" height="400" alt="yueruのアイコンです！">
       <p>癒しは猫。すり寄ってほしい願望が止まらない。<br>
       カラオケ、ラウワン、酒場などの娯楽が学校帰り、気軽に味わえない我々は、時折出没する野良猫に癒しを求めています。</p>
     </section>
