--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <title>やまうえの学校、APU</title>
   <link rel="icon" href="re：quest.jpg">
   <meta name="description" content="yueruのポートフォリオサイトです">
-  <link rel="stylesheet" href="https://github.com/taka1995/flow-demo/blob/master/public/style.css">
+  <link rel="stylesheet" type= "text/css"　href="https://github.com/taka1995/flow-demo/blob/master/public/style.css">
   </head>
   <body>
     <header>
