--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
       <h1>HIDEOUT PLACE</h1>
 
     <section>
-      <h1>Drink all day</h1>
+      <h1>YOU ONLY LIVE ONCE</h1>
       <img src="https://github.com/taka1995/flow-demo/blob/master/public/ダウンロード (1).jpeg" width="400" height="400" alt="yueruのアイコンです！">
       <p>APUはバイリンガル育成所。理由は学生の半分以上が世界中から集まる留学生だから。<br>
       所在地の別府にあるマックでは店内のお客様の国籍数と総席数が一致するときなんかあるらしい。</p>
