--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
       <h1>HIDEOUT PLACE</h1>
 
     <section>
-      <h1>YOU ONLY LIVE ONCE</h1>
+      <h1>APU Belongings</h1>
       <img src="https://github.com/taka1995/flow-demo/blob/master/public/ダウンロード (1).jpeg" width="400" height="400" alt="yueruのアイコンです！">
       <p>APUはバイリンガル育成所。理由は学生の半分以上が世界中から集まる留学生だから。<br>
       所在地の別府にあるマックでは店内のお客様の国籍数と総席数が一致するときなんかあるらしい。</p>
@@ -51,7 +51,7 @@
         ちなみに、この霧が晴れれば上記の風景写真が現れます。</p>
     </section>
     <section>
-      <h1>Pretty Cat</h1>
+      <h1>Reflesh Time</h1>
       <img src="https://github.com/taka1995/flow-demo/blob/master/public/images (2) 2.24.42.jpeg" width="400" height="400" alt="yueruのアイコンです！">
       <p>癒しは猫。すり寄ってほしい願望が止まらない。<br>
       カラオケ、ラウワン、酒場などの娯楽が学校帰り、気軽に味わえない我々は、時折出没する野良猫に癒しを求めています。</p>
