--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <title>やまうえの学校、APU</title>
   <link rel="icon" href="re：quest.jpg">
   <meta name="description" content="yueruのポートフォリオサイトです">
-  <link rel="stylesheet" type="text/css"　href="./style.css">
+  <link rel="stylesheet" type="text/css"　href="/style.css">
   </head>
   <body>
     <header>
@@ -15,7 +15,7 @@
 
 
       <a href="http://www.apu.ac.jp/home/" target="_blank">
-      <img src="https://github.com/taka1995/flow-demo/blob/master/public/ダウンロード.png" width="120" height="120" alt="yueruのアイコンです！">
+      <img src="/ダウンロード.png" width="120" height="120" alt="yueruのアイコンです！">
       </a>
     </div>
     <div class="info">
