--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       <p>WELCOME TO APU WORLD</p>
       <div class="submittion">
 
-      <p>First Name<input type="text" name="名前" /></p>
+      <p>First Name<input type="text" name="名前" alt="First Name"/></p>
       <p>Last Name<input type="text" name="名前" /></p>
       <p>Mail<input type="text" name="メール" /></p>
       <p>Submit<input type="submit" value="送信" /></p>
