--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <title>やまうえの学校、APU</title>
   <link rel="icon" href="re：quest.jpg">
   <meta name="description" content="yueruのポートフォリオサイトです">
-  <link rel="stylesheet" type="text/css"　href="/style.css">
+  <link rel="stylesheet" type="text/css"　href="../styles/style.css">
   </head>
   <body>
     <header>
@@ -15,7 +15,7 @@
 
 
       <a href="http://www.apu.ac.jp/home/" target="_blank">
-      <img src="/ダウンロード.png" width="120" height="120" alt="yueruのアイコンです！">
+      <img src="../imgs/ダウンロード.png" width="120" height="120" alt="yueruのアイコンです！">
       </a>
     </div>
     <div class="info">
@@ -40,20 +40,20 @@
 
     <section>
       <h1>APU Belongings</h1>
-      <img src="https://github.com/taka1995/flow-demo/blob/master/public/ダウンロード (1).jpeg" width="400" height="400" alt="yueruのアイコンです！">
+      <img src="../imgs/ダウンロード (1).jpeg" width="400" height="400" alt="yueruのアイコンです！">
       <p>APUはバイリンガル育成所。理由は学生の半分以上が世界中から集まる留学生だから。<br>
       所在地の別府にあるマックでは店内のお客様の国籍数と総席数が一致するときなんかあるらしい。</p>
     </section>
     <section>
       <h1>Shape Your World</h1>
-      <img src="https://github.com/taka1995/flow-demo/blob/master/public/1f6023c8b6f013fe1c5e2c176fc97330-e1564047168380.png" width="400" height="400" alt="yueruのアイコンです！">
+      <img src="../imgs/1f6023c8b6f013fe1c5e2c176fc97330-e1564047168380.png" width="400" height="400" alt="yueruのアイコンです！">
       <p>外の娯楽とは関係の一切を絶った、標高300Mの高所に位置するAPU。<br>
         山上にそびえ立つその姿を表すなら天空の城というよりは人里離れた寺であり、辺りに存在する飲食店は学食堂の一箇所のみ。<br>
         ちなみに、この霧が晴れれば上記の風景写真が現れます。</p>
     </section>
     <section>
       <h1>Reflesh Time</h1>
-      <img src="https://github.com/taka1995/flow-demo/blob/master/public/images (2) 2.24.42.jpeg" width="400" height="400" alt="yueruのアイコンです！">
+      <img src="../imgs/images (2) 2.24.42.jpeg" width="400" height="400" alt="yueruのアイコンです！">
       <p>癒しは猫。すり寄ってほしい願望が止まらない。<br>
       カラオケ、ラウワン、酒場などの娯楽が学校帰り、気軽に味わえない我々は、時折出没する野良猫に癒しを求めています。</p>
     </section>
