--- a/public/index.html
+++ b/public/index.html
@@ -23,11 +23,12 @@
       <h1>Asia Pacific University</h1>
       <p>WELCOME TO APU WORLD</p>
       <div class="submittion">
-
+<form action="https://data.heroku.com/datastores/7cb55efc-8206-4ab2-b30d-6867f604416d#" method="post">
       <p>First Name<input type="text" name="名前" /></p>
       <p>Last Name<input type="text" name="名前" /></p>
       <p>Mail<input type="text" name="メール" /></p>
       <p>Submit<input type="submit" value="送信" /></p>
+  </form>
       </div>
 </div>
     </div>
