--- a/public/index.html
+++ b/public/index.html
@@ -23,12 +23,15 @@
       <h1>Asia Pacific University</h1>
       <p>WELCOME TO APU WORLD</p>
       <div class="submittion">
-<form action="https://data.heroku.com/datastores/7cb55efc-8206-4ab2-b30d-6867f604416d#" method="post">
+        
+<form action="postgres://sanqjeqsvmdkab:40fef6d94c6b02f43477c2d0f9bef4f37574b19cc19a88008660d703cf80fc99@ec2-54-197-239-115.compute-1.amazonaws.com:5432/d3e1oa9qo0fvtp
+" method="post">
       <p>First Name<input type="text" name="名前" /></p>
       <p>Last Name<input type="text" name="名前" /></p>
       <p>Mail<input type="text" name="メール" /></p>
       <p>Submit<input type="submit" value="送信" /></p>
   </form>
+        
       </div>
 </div>
     </div>
