--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
  function timestamp() { var response = document.getElementById("g-recaptcha-response"); if (response == null || response.value.trim() == "") {var elems = JSON.parse(document.getElementsByName("captcha_settings")[0].value);elems["ts"] = JSON.stringify(new Date().getTime());document.getElementsByName("captcha_settings")[0].value = JSON.stringify(elems); } } setInterval(timestamp, 500); 
 </script>
 
+<!--  ----------------------------
   <meta charset="utf-8">
   <title>やまうえの学校、APU</title>
   <link rel="icon" href="re：quest.jpg">
@@ -33,18 +34,16 @@
 
       <h1>Asia Pacific University</h1>
       <p>WELCOME TO APU WORLD</p>
-      <div class="submittion">
-        
-
-<!--  ----------------------------------------------------------------------  -->
+      
+     ------------------------------------------  -->
 <!--  次の <FORM> 要素をページに追加してください。                                              -->
 <!--  ----------------------------------------------------------------------  -->
 
 <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST">
 
-<input type=hidden name='captcha_settings' value='{"keyname":"yueru","fallback":"true","orgId":"00D2v000002A8sp","ts":""}'>
+<input type=hidden name='captcha_settings' value='{"keyname":"takaiw14","fallback":"true","orgId":"00D2v000002A8sp","ts":""}'>
 <input type=hidden name="oid" value="00D2v000002A8sp">
-<input type=hidden name="retURL" value="https://yueru.herokuapp.com">
+<input type=hidden name="retURL" value="https://yueru.herokuapp.com/">
 
 <!--  ----------------------------------------------------------------------  -->
 <!--  注意: これらの項目は、省略可能なデバッグ用要素です。デバッグモードでテストを行う場合は、これらの行をコメント解除してください。        -->
@@ -58,18 +57,11 @@
 
 <label for="email">メール</label><input  id="email" maxlength="80" name="email" size="20" type="text" /><br>
 
-<label for="company">会社名</label><input  id="company" maxlength="40" name="company" size="20" type="text" /><br>
-
-<label for="city">市区郡</label><input  id="city" maxlength="40" name="city" size="20" type="text" /><br>
-
-<label for="state">都道府県</label><input  id="state" maxlength="20" name="state" size="20" type="text" /><br>
-
-<div class="g-recaptcha" data-sitekey="https://yueru.herokuapp.com"></div><br>
+<div class="g-recaptcha" data-sitekey="6LfgGbwUAAAAAOeaJPyzDqF40NRDmCuDEcg2StjV"></div><br>
 <input type="submit" name="submit">
 
 </form>
 
-      </div>
 </div>
     </div>
 
