--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <!--  ----------------------------------------------------------------------  -->
+ 
+   <!--  ----------------------------------------------------------------------  -->
 <!--  次の <META> 要素を、HTML の <HEAD>タグ間に追加してください。必要に応じて、charset                  -->
 <!--  パラメータを変更して、HTML ページの文字コードを指定してください。                                     -->
 <!--  ----------------------------------------------------------------------  -->
@@ -12,7 +13,6 @@
  function timestamp() { var response = document.getElementById("g-recaptcha-response"); if (response == null || response.value.trim() == "") {var elems = JSON.parse(document.getElementsByName("captcha_settings")[0].value);elems["ts"] = JSON.stringify(new Date().getTime());document.getElementsByName("captcha_settings")[0].value = JSON.stringify(elems); } } setInterval(timestamp, 500); 
 </script>
 
-<!--  ----------------------------
   <meta charset="utf-8">
   <title>やまうえの学校、APU</title>
   <link rel="icon" href="re：quest.jpg">
@@ -35,7 +35,18 @@
       <h1>Asia Pacific University</h1>
       <p>WELCOME TO APU WORLD</p>
       
-     ------------------------------------------  -->
+   <!--  ----------------------------------------------------------------------  -->
+<!--  次の <META> 要素を、HTML の <HEAD>タグ間に追加してください。必要に応じて、charset                  -->
+<!--  パラメータを変更して、HTML ページの文字コードを指定してください。                                     -->
+<!--  ----------------------------------------------------------------------  -->
+
+<META HTTP-EQUIV="Content-type" CONTENT="text/html; charset=UTF-8">
+<script src="https://www.google.com/recaptcha/api.js"></script>
+<script>
+ function timestamp() { var response = document.getElementById("g-recaptcha-response"); if (response == null || response.value.trim() == "") {var elems = JSON.parse(document.getElementsByName("captcha_settings")[0].value);elems["ts"] = JSON.stringify(new Date().getTime());document.getElementsByName("captcha_settings")[0].value = JSON.stringify(elems); } } setInterval(timestamp, 500); 
+</script>
+
+<!--  ----------------------------------------------------------------------  -->
 <!--  次の <FORM> 要素をページに追加してください。                                              -->
 <!--  ----------------------------------------------------------------------  -->
 
@@ -61,6 +72,7 @@
 <input type="submit" name="submit">
 
 </form>
+
 
 </div>
     </div>
