--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
  
-   <!--  ----------------------------------------------------------------------  -->
+  <!--  ----------------------------------------------------------------------  -->
 <!--  次の <META> 要素を、HTML の <HEAD>タグ間に追加してください。必要に応じて、charset                  -->
 <!--  パラメータを変更して、HTML ページの文字コードを指定してください。                                     -->
 <!--  ----------------------------------------------------------------------  -->
@@ -35,24 +35,14 @@
       <h1>Asia Pacific University</h1>
       <p>WELCOME TO APU WORLD</p>
       
-   <!--  ----------------------------------------------------------------------  -->
-<!--  次の <META> 要素を、HTML の <HEAD>タグ間に追加してください。必要に応じて、charset                  -->
-<!--  パラメータを変更して、HTML ページの文字コードを指定してください。                                     -->
-<!--  ----------------------------------------------------------------------  -->
-
-<META HTTP-EQUIV="Content-type" CONTENT="text/html; charset=UTF-8">
-<script src="https://www.google.com/recaptcha/api.js"></script>
-<script>
- function timestamp() { var response = document.getElementById("g-recaptcha-response"); if (response == null || response.value.trim() == "") {var elems = JSON.parse(document.getElementsByName("captcha_settings")[0].value);elems["ts"] = JSON.stringify(new Date().getTime());document.getElementsByName("captcha_settings")[0].value = JSON.stringify(elems); } } setInterval(timestamp, 500); 
-</script>
-
+ 
 <!--  ----------------------------------------------------------------------  -->
 <!--  次の <FORM> 要素をページに追加してください。                                              -->
 <!--  ----------------------------------------------------------------------  -->
 
 <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST">
 
-<input type=hidden name='captcha_settings' value='{"keyname":"takaiw14","fallback":"true","orgId":"00D2v000002A8sp","ts":""}'>
+<input type=hidden name='captcha_settings' value='{"keyname":"takato","fallback":"true","orgId":"00D2v000002A8sp","ts":""}'>
 <input type=hidden name="oid" value="00D2v000002A8sp">
 <input type=hidden name="retURL" value="https://yueru.herokuapp.com/">
 
@@ -68,7 +58,7 @@
 
 <label for="email">メール</label><input  id="email" maxlength="80" name="email" size="20" type="text" /><br>
 
-<div class="g-recaptcha" data-sitekey="6LfgGbwUAAAAAOeaJPyzDqF40NRDmCuDEcg2StjV"></div><br>
+<div class="g-recaptcha" data-sitekey="6LcIGrwUAAAAANpySAVYIujuarI4ebFx0FZZAFTL"></div><br>
 <input type="submit" name="submit">
 
 </form>
