--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   <title>やまうえの学校、APU</title>
   <link rel="icon" href="re：quest.jpg">
   <meta name="description" content="yueruのポートフォリオサイトです">
-  <link rel="stylesheet" type="text/css"　href="../styles/style.css">
+  <link rel="stylesheet" type="text/css"　href="../style/style.css">
   </head>
   <body>
     <header>
