--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,6 @@
 <html lang="ja">
 <head>
  
-  <!--  ----------------------------------------------------------------------  -->
-<!--  次の <META> 要素を、HTML の <HEAD>タグ間に追加してください。必要に応じて、charset                  -->
-<!--  パラメータを変更して、HTML ページの文字コードを指定してください。                                     -->
-<!--  ----------------------------------------------------------------------  -->
-
-<META HTTP-EQUIV="Content-type" CONTENT="text/html; charset=UTF-8">
-<script src="https://www.google.com/recaptcha/api.js"></script>
-<script>
- function timestamp() { var response = document.getElementById("g-recaptcha-response"); if (response == null || response.value.trim() == "") {var elems = JSON.parse(document.getElementsByName("captcha_settings")[0].value);elems["ts"] = JSON.stringify(new Date().getTime());document.getElementsByName("captcha_settings")[0].value = JSON.stringify(elems); } } setInterval(timestamp, 500); 
-</script>
-
   <meta charset="utf-8">
   <title>やまうえの学校、APU</title>
   <link rel="icon" href="re：quest.jpg">
@@ -36,32 +25,11 @@
       <h1>Asia Pacific University</h1>
       <p>WELCOME TO APU WORLD</p>
       
- 
-<!--  ----------------------------------------------------------------------  -->
-<!--  次の <FORM> 要素をページに追加してください。                                              -->
-<!--  ----------------------------------------------------------------------  -->
-
-<form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST">
-
-<input type=hidden name='captcha_settings' value='{"keyname":"takato","fallback":"true","orgId":"00D2v000002A8sp","ts":""}'>
-<input type=hidden name="oid" value="00D2v000002A8sp">
-<input type=hidden name="retURL" value="https://yueru.herokuapp.com/">
-
-<!--  ----------------------------------------------------------------------  -->
-<!--  注意: これらの項目は、省略可能なデバッグ用要素です。デバッグモードでテストを行う場合は、これらの行をコメント解除してください。        -->
-<!--  <input type="hidden" name="debug" value=1>                              -->
-<!--  <input type="hidden" name="debugEmail" value="takaiw14@gmail.com">      -->
-<!--  ----------------------------------------------------------------------  -->
-
-<label for="first_name">名</label><input  id="first_name" maxlength="40" name="first_name" size="20" type="text" /><br>
-
-<label for="last_name">姓</label><input  id="last_name" maxlength="80" name="last_name" size="20" type="text" /><br>
-
-<label for="email">メール</label><input  id="email" maxlength="80" name="email" size="20" type="text" /><br>
-
-<div class="g-recaptcha" data-sitekey="6LcIGrwUAAAAANpySAVYIujuarI4ebFx0FZZAFTL"></div><br>
-<input type="submit" name="submit">
-
+ <form action="/action_page.php">
+  First name: <input type="text" name="fname"><br>
+  Last name: <input type="text" name="lname"><br>
+  Mail: <input type="text" name="mail"><br>
+  <input type="submit" value="Submit">
 </form>
 
 
