--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       <h1>Asia Pacific University</h1>
       <p>WELCOME TO APU WORLD</p>
       
- <form action="ec2-54-197-239-115.compute-1.amazonaws.com">
+ <form action="DATABASE_URL" method="post">
   First name: <input type="text" name="fname"><br>
   Last name: <input type="text" name="lname"><br>
   Mail: <input type="text" name="mail"><br>
