--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       <h1>Asia Pacific University</h1>
       <p>WELCOME TO APU WORLD</p>
       
- <form action="DATABASE_URL" method="post">
+ <form action="postgres://sanqjeqsvmdkab:40fef6d94c6b02f43477c2d0f9bef4f37574b19cc19a88008660d703cf80fc99@ec2-54-197-239-115.compute-1.amazonaws.com:5432/d3e1oa9qo0fvtp" method="post">
   First name: <input type="text" name="fname"><br>
   Last name: <input type="text" name="lname"><br>
   Mail: <input type="text" name="mail"><br>
